--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
 	},
 	
     "require": {
-        "nikic/fast-route": "^1.3",
-		"smarty/smarty": "^3.1"		
+        "nikic/fast-route": "^1.3"			
     }
 }
