--- a/.htaccess
+++ b/.htaccess
@@ -12,18 +12,11 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php [L]
 
 # Перенаправление на страницу 404.php
-#ErrorDocument 404 /404.php
-
-# Скрыть расширение файла .php
-#RewriteEngine On
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteCond %{REQUEST_FILENAME}\.php -f
-#RewriteRule ^(.*)$ $1.php
+ErrorDocument 404 /404.php
 
 # DO NOT REMOVE THIS LINE AND THE LINES BELLOW UPGRADE_INSECURE_REQUESTS:filive.tech
 Header always set Content-Security-Policy: upgrade-insecure-requests
 # DO NOT REMOVE THIS LINE AND THE LINES BELLOW UPGRADE_INSECURE_REQUESTS:filive.tech
-
 
 # DO NOT REMOVE THIS LINE AND THE LINES BELLOW SSL_REDIRECT:filive.ru
 RewriteEngine on
