--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - "443:443"
      volumes:
         - ./docker_deploy/log/nginx:/var/log/nginx/
-        - .:/var/www/html/
+        - ./AdminLTE/:/var/www/html/
         - ./docker_deploy/nginx/default.conf:/etc/nginx/conf.d/default.conf
      
      links:
