--- a/docker_deploy/nginx/default.conf
+++ b/docker_deploy/nginx/default.conf
@@ -1,5 +1,6 @@
 server {
-    listen  [::]:80;    
+    listen  80;    
+    #listen  [::]:80;    
     server_name  monocms;
 	
 	error_log 	/var/log/nginx/error.log;
@@ -27,7 +28,8 @@ server {
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
-    location ~ \.php$ {  
+    
+	location ~ \.php$ {  
 		#try_files $uri =404;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
